--- a/package.json
+++ b/package.json
@@ -104,14 +104,7 @@
       [
         "@semantic-release/exec",
         {
-          "publishCmd": "npx npm-pkgbuild --available --continue"
-        }
-      ],
-      "@semantic-release/github",
-      [
-        "@semantic-release/github",
-        {
-          "assets": []
+          "publishCmd": "npx npm-pkgbuild --available --continue --publish dist"
         }
       ],
       [
