--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/konsumation/konsum.git"
+    "url": "https://github.com/konsumation/konsum"
   },
   "bugs": {
     "url": "https://github.com/konsumation/konsum/issues"
