--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "levelup": "^5.1.1"
   },
   "devDependencies": {
+    "@apidevtools/swagger-parser": "^10.1.0",
     "@konsumation/openapi": "^1.0.2",
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/exec": "^6.0.3",
