--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "devDependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
     "@konsumation/openapi": "^1.1.0",
-    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/commit-analyzer": "^10.0.0",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/release-notes-generator": "^11.0.2",
     "ava": "^5.3.0",
@@ -53,7 +53,7 @@
     "got": "^13.0.0",
     "ldif": "^0.5.1",
     "npm-pkgbuild": "^11.8.6",
-    "semantic-release": "^21.0.2",
+    "semantic-release": "^21.0.3s",
     "tmp": "^0.2.1"
   },
   "optionalDependencies": {
