--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "got": "^13.0.0",
     "ldif": "^0.5.1",
     "npm-pkgbuild": "^11.8.6",
-    "semantic-release": "^21.0.3s",
+    "semantic-release": "^21.0.5",
     "tmp": "^0.2.1"
   },
   "optionalDependencies": {
