--- a/package.json
+++ b/package.json
@@ -149,7 +149,7 @@
       "arlac77/template-documentation",
       "arlac77/template-nginx",
       "arlac77/template-node-app",
-      "arlac77/template-pacman",
+      "arlac77/template-npm-pkgbuild",
       "arlac77/template-systemd",
       "konsumation/template"
     ]
