--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "got": "^13.0.0",
     "ldif": "^0.5.1",
     "npm-pkgbuild": "^13.0.1",
-    "semantic-release": "^22.0.6",
+    "semantic-release": "^22.0.7",
     "tmp": "^0.2.1"
   },
   "optionalDependencies": {
@@ -69,7 +69,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/konsumation/konsum.git"
+    "url": "https://github.com/konsumation/konsum"
   },
   "bugs": {
     "url": "https://github.com/konsumation/konsum/issues"
