--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/konsumation/konsum"
+    "url": "git+https://github.com/konsumation/konsum.git"
   },
   "bugs": {
     "url": "https://github.com/konsumation/konsum/issues"
