--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint:docs": "documentation lint ./src/**/*.mjs"
   },
   "dependencies": {
-    "@konsumation/db": "^5.3.1",
+    "@konsumation/db-level": "^5.3.2",
     "commander": "^12.0.0",
     "config-expander": "^13.0.8",
     "jsonwebtoken": "^9.0.2",
