feat: use modernized @konsumation/db-level

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,12 @@ permissions:
 jobs:
   test-node:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+        node-version:
+          - 20.11.1
     services:
       slapd:
         image: nickstenning/slapd
