--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint:docs": "documentation lint ./src/**/*.mjs"
   },
   "dependencies": {
-    "@konsumation/db-level": "^5.3.2",
+    "@konsumation/db-level": "^5.4.0",
     "commander": "^12.0.0",
     "config-expander": "^13.0.8",
     "jsonwebtoken": "^9.0.2",
@@ -37,9 +37,7 @@
     "koa-better-router": "^2.1.1",
     "koa-bodyparser": "^4.3.0",
     "koa-jwt": "^4.0.4",
-    "ldapts": "^7.0.10",
-    "leveldown": "^6.1.1",
-    "levelup": "^5.1.1"
+    "ldapts": "^7.0.10"
   },
   "devDependencies": {
     "@apidevtools/swagger-parser": "^10.1.0",
