--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
+        node-version: 20.12.0
     services:
       slapd:
         image: nickstenning/slapd
