--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,9 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-        node-version: 20.12.0
+        node-version:
+          - 20.12.0
+          - 20.12.1
     services:
       slapd:
         image: nickstenning/slapd
@@ -69,7 +71,7 @@ jobs:
       - uses: actions/checkout@v4.1.2
       - uses: actions/setup-node@v4.0.2
         with:
-          node-version: 20.12.0
+          node-version: 20.12.1
           cache: npm
           cache-dependency-path: package-lock.json
       - run: npm ci
