--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@konsumation/db-level": "^7.1.1",
+    "@konsumation/db-postgresql": "^2.2.1",
     "commander": "^12.0.0",
     "config-expander": "^14.0.0",
     "jsonwebtoken": "^9.0.2",
