--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/release-notes-generator": "^13.0.0",
     "ava": "^6.1.2",
+    "browser-stream-util": "^1.2.0",
     "c8": "^9.1.0",
     "documentation": "^14.0.3",
     "execa": "^8.0.1",
     "got": "^14.2.1",
+    "jsonschema": "^1.4.1",
     "ldif": "^0.5.1",
     "npm-pkgbuild": "^15.2.1",
     "semantic-release": "^23.0.8",
