--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
     "access": "public",
     "provenance": true
   },
+  "types": "./types/server.d.mts",
+  "exports": {
+    ".": {
+      "default": "./src/server.mjs",
+      "types": "./types/server.d.mts"
+    }
+  },
   "description": "Collect resource usage in a home environment",
   "contributors": [
     {
@@ -19,21 +26,17 @@
   "bin": {
     "konsum": "src/konsum-cli.mjs"
   },
-  "types": "./types/server.d.mts",
-  "exports": {
-    ".": {
-      "default": "./src/server.mjs",
-      "types": "./types/server.d.mts"
-    }
-  },
   "scripts": {
+    "prepare": "npm run prepare:typescript",
+    "prepare:typescript": "tsc --allowJs --declaration --emitDeclarationOnly --declarationDir types --resolveJsonModule -t esnext -m esnext --module nodenext --moduleResolution nodenext --rootDir src ./src**/*.mjs",
     "start": "node src/konsum-cli.mjs --config=config start",
     "test": "npm run test:ava",
     "test:ava": "ava --timeout 4m tests/*-ava.mjs tests/*-ava-node.mjs",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 4m tests/*-ava.mjs tests/*-ava-node.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme --section=API ./src/**/*.mjs",
-    "lint": "npm run lint:docs",
-    "lint:docs": "documentation lint ./src/**/*.mjs"
+    "lint": "npm run lint:typescript && npm run lint:docs",
+    "lint:docs": "documentation lint ./src/**/*.mjs",
+    "lint:typescript": "tsc --allowJs --checkJs --noEmit --resolveJsonModule -t esnext -m esnext --module nodenext --moduleResolution nodenext ./src**/*.mjs"
   },
   "dependencies": {
     "@konsumation/db-level": "^9.0.7",
@@ -64,7 +67,8 @@
     "ldif": "^0.5.1",
     "npm-pkgbuild": "^15.2.5",
     "semantic-release": "^23.0.8",
-    "tmp": "^0.2.1"
+    "tmp": "^0.2.1",
+    "typescript": "^5.4.5"
   },
   "optionalDependencies": {
     "mf-hosting": "^2.0.6",
@@ -161,6 +165,7 @@
       "arlac77/template-node-app",
       "arlac77/template-npm-pkgbuild",
       "arlac77/template-systemd",
+      "arlac77/template-typescript",
       "konsumation/template"
     ]
   }
