--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test:ava": "ava --timeout 4m tests/*-ava.mjs tests/*-ava-node.mjs",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 4m tests/*-ava.mjs tests/*-ava-node.mjs && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme --section=API ./src/**/*.mjs",
-    "lint": "npm run lint:typescript && npm run lint:docs",
+    "lint": "npm run lint:docs && npm run lint:typescript",
     "lint:docs": "documentation lint ./src/**/*.mjs",
     "lint:typescript": "tsc --allowJs --checkJs --noEmit --resolveJsonModule -t esnext -m esnext --module nodenext --moduleResolution nodenext ./src**/*.mjs"
   },
@@ -65,7 +65,7 @@
     "got": "^14.2.1",
     "jsonschema": "^1.4.1",
     "ldif": "^0.5.1",
-    "npm-pkgbuild": "^15.2.5",
+    "npm-pkgbuild": "^15.3.0",
     "semantic-release": "^23.0.8",
     "tmp": "^0.2.1",
     "typescript": "^5.4.5"
