--- a/package.json
+++ b/package.json
@@ -51,19 +51,18 @@
     "ldapts": "^7.0.11"
   },
   "devDependencies": {
-    "@apidevtools/swagger-parser": "^10.1.0",
     "@konsumation/db-test": "^4.1.7",
     "@konsumation/openapi": "^2.3.2",
     "@semantic-release/commit-analyzer": "^12.0.0",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/release-notes-generator": "^13.0.0",
     "ava": "^6.1.2",
+    "ava-openapi": "^1.0.0",
     "browser-stream-util": "^1.2.0",
     "c8": "^9.1.0",
     "documentation": "^14.0.3",
     "execa": "^8.0.1",
     "got": "^14.2.1",
-    "jsonschema": "^1.4.1",
     "ldif": "^0.5.1",
     "npm-pkgbuild": "^15.3.0",
     "semantic-release": "^23.0.8",
