test: use path regex in openapi tess

--- a/config/config.json
+++ b/config/config.json
@@ -31,7 +31,8 @@
           "konsum", 
           "konsum.admin.backup",
           "konsum.admin.stop",
-          "konsum.admin.reload"
+          "konsum.admin.reload",
+          "konsum.admin.token"
         ]
       }
     },
