test: declare postgres service

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,13 @@ jobs:
         node-version:
           - 20.12.2
           - 22.1.0
+    env:
+      POSTGRES_URL: postgresql://postgres:postgres@localhost:5432/ci_db_test
+      POSTGRES_USER: postgres
+      PGPASSWORD: postgres
+      POSTGRES_DB: ci_db_test
+      POSTGRES_HOST: localhost
+      POSTGRES_PORT: 5432
     services:
       slapd:
         image: nickstenning/slapd
@@ -29,6 +36,17 @@ jobs:
           LDAP_ROOTPASS: test
         ports:
           - 389:389
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: ci_db_test
+          POSTGRES_HOST_AUTH_METHOD: md5
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v4.1.4
       - uses: actions/setup-node@v4.0.2
