fix: copy hwole node_module dir into pkg for now

--- a/package.json
+++ b/package.json
@@ -99,7 +99,8 @@
           "type": "npm-pack"
         },
         {
-          "type": "node-modules"
+          "type": "node-modules",
+	  "withoutDevelpmentDependencies": false
         }
       ]
     },
