--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           - 20.13.1
           - 22.2.0
     env:
-      POSTGRES_URL: postgresql://postgres:postgres@localhost:5432/ci_db_test
+      POSTGRES_URL_DISABLED: postgresql://postgres:postgres@localhost:5432/ci_db_test
       POSTGRES_USER: postgres
       PGPASSWORD: postgres
       POSTGRES_DB: ci_db_test
