--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
       - run: npm ci
       - run: node tests/helpers/ldapadd.mjs -h localhost:389 -D
           cn=admin,dc=example,dc=com -w test -f tests/fixtures/ldap/base.ldif
-      - name: null
+      - name: checkout
         run: npm ci
       - run: npm run cover --if-present
       - name: Coveralls Parallel
