--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,8 @@ jobs:
           cn=admin,dc=example,dc=com -w test -f tests/fixtures/ldap/base.ldif
       - name: checkout
         run: npm ci
-      - run: npm run cover --if-present
+      - name: test and coverage
+        run: npm run cover --if-present
       - name: coveralls
         uses: coverallsapp/github-action@v2
         continue-on-error: true
