--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,6 +110,7 @@ jobs:
       - name: checkout
         run: npm ci
       - name: release
+        name: release
         run: npx semantic-release
         env:
           CI: "true"
