--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,8 @@ jobs:
           cn=admin,dc=example,dc=com -w test -f tests/fixtures/ldap/base.ldif
       - name: checkout
         run: npm ci
+      - name: install
+        run: npm ci
       - name: test and coverage
         run: npm run cover --if-present
       - name: coveralls
@@ -108,6 +110,8 @@ jobs:
           cache: npm
           cache-dependency-path: package-lock.json
       - name: checkout
+        run: npm ci
+      - name: install
         run: npm ci
       - name: release
         run: npx semantic-release
