--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
       pull-requests: write
       id-token: write
     steps:
-      - name: Dependencies
+      - name: install dependencies
         run: >
           if [ ! -f /usr/bin/pacman ]
 
