--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "npm-pkgbuild": "^15.6.10",
     "semantic-release": "^24.2.0",
     "tmp": "^0.2.1",
-    "typescript": "^5.7.1-rc"
+    "typescript": "^5.7.2"
   },
   "optionalDependencies": {
     "mf-hosting": "^2.8.4",
