--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "access": "public",
     "provenance": false
   },
+  "packageManager": "npm@11.6.0+sha512.77f3fb0dbbd881835d7bd1217deabdf7ed77fc4ec4f363df64fc3cb986404abf6c437661041080f5c5d225103508e7c9ea30cb2742b7e942675d05a10af2d7b9",
   "types": "./types/server.d.mts",
   "exports": {
     ".": {
@@ -65,7 +66,7 @@
     "execa": "^9.6.0",
     "got": "^14.4.8",
     "ldif": "^0.5.1",
-    "npm-pkgbuild": "^18.2.26",
+    "npm-pkgbuild": "^18.2.27",
     "semantic-release": "^24.2.7",
     "tmp": "^0.2.1",
     "typescript": "^5.9.2"
